crates/tapir-script/compiler/src/compile/snapshots/compiler__compile__type_visitor__test__symtab_fail_snapshot_tests@function_call_fail.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/type_visitor.rs
expression: err_str
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/type_visitor/function_call_fail.tapir
---
Error: No such function baz
    ╭─[ function_call_fail.tapir:14:1 ]
    │
 14 │ baz();
    │ ───┬──  
    │    ╰──── Unknown function
────╯
Error: Left hand side has type fix but right hand side has type int
   ╭─[ function_call_fail.tapir:9:9 ]
   │
 9 │ var x = foo() * 2;
   │         ────┬────  
   │             ╰────── Mismatching types on binary operator
───╯
Error: Function call must return exactly 1 value here, but got 2
    ╭─[ function_call_fail.tapir:10:9 ]
    │
 10 │ var y = bar() * 2.3;
    │         ──┬──  
    │           ╰──── Function must return 1 value here
────╯
Error: Function call must return exactly 1 value here, but got 2
    ╭─[ function_call_fail.tapir:12:9 ]
    │
 12 │ var z = bar();
    │         ──┬──  
    │           ╰──── Function must return 1 value here
────╯
